compilableModuleTypes - prefer an immutable set
GitOrigin-RevId: a9c38f4d898b1edaef7c5b48e6d7a97b62ae789e