@@ -1,11 +1,10 @@
-// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.jps.builders.java;
 
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.jps.model.module.JpsModuleType;
 
 import java.io.File;
-import java.util.Collections;
 import java.util.Set;
 
 /**
@@ -24,7 +23,6 @@ public abstract class JavaBuilderExtension {
    * Override this method to extend set of modules which should be processed by Java compiler.
    */
   public @NotNull Set<? extends JpsModuleType<?>> getCompilableModuleTypes() {
-    return Collections.emptySet();
+    return Set.of();
   }
-
 }
